@@ -19,4 +19,5 @@ reports.html.dir=${reports.dir}/junit-html
 
 # Coverage reports are deposited into these directories
 coverage.xml.dir=${reports.dir}/cobertura-xml
+coverage.summaryxml.dir=${reports.dir}/cobertura-summary-xml
 coverage.html.dir=${reports.dir}/cobertura-html
